k8s/app/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: co2-calculator
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: co2-calculator
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
