k8s/app/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: co2-calculator
spec:
  tls:
    - hosts:
        - co2-calculator.berget.cloud
      secretName: co2-calculator-tls
  rules:
    - host: co2-calculator.berget.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: co2-calculator
                port:
                  number: 80
